# parser

./: .gitignore  AGENTS.md  README.md  parser_layer.py  pyproject.toml  qms-doc-parser.desktop  run_parser_gui.bat
configs/: style_registry_adm_tem_011_b.yaml
data/input/: 1.docx
data/output/: 1.json
scripts/: launch_parser_gui.py  run_export_review_docx.py  run_minimal_ui.py  run_parse.py  run_question_generation.py  run_requirement_apply.py  run_requirement_candidates.py  run_requirement_decomposition.py  run_requirement_review.py  run_review_candidates.py  run_validation_batch.py  run_validation_report.py
src/qms_doc_parser/: main.py
src/qms_doc_parser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/qms_doc_parser/classifiers/: style_classifier.py
src/qms_doc_parser/exporters/: __init__.py  review_docx.py
src/qms_doc_parser/extractors/: block_iterator.py  table_parser.py
src/qms_doc_parser/io/: docx_loader.py
src/qms_doc_parser/models/: parser_models.py  registry_models.py
src/qms_doc_parser/parsers/: __init__.py  note_parser.py  table_parser.py
src/qms_doc_parser/ui/: __init__.py  (+1 more)
tests/: test_formatting_fidelity.py  test_gui_launcher.py  test_minimal_ui.py  test_note_parser.py  test_parser_layer.py  test_question_generation.py  test_requirement_apply.py  test_requirement_candidates.py  test_requirement_decomposition.py  test_requirement_review.py  test_review_candidates.py  test_review_docx_export.py  test_sample_fixture.py  test_structure_detection.py  test_table_parser.py  test_validation_batch.py  test_validation_report.py
(+20 files in other folders)
